--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=nothing@myhome&work
 JWT_EXPIRES_IN=1h
-MONGODB_URI=mongodb+srv://murtadaabed:i6cuGkG3EKz7Pxbl@myteam.ohzxo.mongodb.net/?retryWrites=true&w=majority&appName=myteam
+MONGODB_URI=mongodb+srv://murtadaabed:i6cuGkG3EKz7Pxbl@myteam.ohzxo.mongodb.net/teamsDB?retryWrites=true&w=majority&appName=myteam
