--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.0.0",  
+    "mongoose": "^8.0.0",
+    "nodemailer": "^6.10.0",
     "rimraf": "^6.0.1",
     "uuid": "^11.1.0"
   },
